fix for extra space between period and link.

--- a/src/platform/site-wide/sass/merger.scss
+++ b/src/platform/site-wide/sass/merger.scss
@@ -849,4 +849,10 @@
       display: none;
     }
   }
+
+  .va-l-detail-page {
+    a {
+      padding-right: 0;
+    }
+  }
 }
